fixed bug: white space when adjustSplit

--- a/MEditor/MEditor.css
+++ b/MEditor/MEditor.css
@@ -156,6 +156,7 @@ i {
 .meditor-split {
     display: flex;
     white-space: nowrap;
+    box-sizing: border-box;
 }
 
 .meditor-split-v {
